--- a/package.json
+++ b/package.json
@@ -10,11 +10,10 @@
       "tailwindcss-elevation": "^2.0.0",
       "tailwindcss-fluid-type": "^2.0.7"
     },
-    "scripts": {
-      "build:css": "npx @dhiwise/component-tagger && npx tailwindcss -i ./css/tailwind.css -o ./css/main.css",
-      "watch:css": "npx @dhiwise/component-tagger && npx tailwindcss -i ./css/tailwind.css -o ./css/main.css --watch",
-      "dev": "npm run watch:css"
-    },
+   "scripts": {
+  "build": "npx @dhiwise/component-tagger && npx tailwindcss -i ./css/tailwind.css -o ./css/main.css",
+  "dev": "npx tailwindcss -i ./css/tailwind.css -o ./css/main.css --watch"
+}
     "author": "",
     "license": "MIT",
     "devDependencies": {
